# querymate

./: .gitignore  README.md  app.py  db_tool_test.py  main.py  pyproject.toml  sql_generator_agent_test.py  sql_validator_agent_test.py  test.py  test_db_tool.py  try.py  viz_code_agent_test.py
.streamlit/: config.toml
scripts/: upload_northwind.py
src/agent/: controller.py  prompts.py  sql_agent.py  sql_generator_agent.py  sql_validator_agent.py  viz_code_agent.py  viz_planner_agent.py
src/api/: main.py
src/app_graph/: fastapi_lifecycle.py  nodes.py  state.py  workflow.py
src/database/: db_tool.py  extract_db_result_preview.py  schema.py
src/langgraph/: db_tool_node.py  graph_build.py  nodes.py  state.py  workflow.py
src/metadata/: data_dictionary.py
src/visualization/: charts.py
tests/: Evaluation_match_metric.py  evaluate_agent.py  llm_judge.py  metrics_calculator.py
tests/data/: golden_set.json  ground_truth.csv
