[project]
name = "querymate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-openai==0.0.8",
    "openai==1.12.0",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.25",
    "sqlglot==20.11.0",
    "streamlit==1.31.0",
]
