[project]
name = "querymate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-openai==0.0.8",
    "langchain-core==0.1.52",
    "langgraph==0.0.39",
    "openai==1.12.0",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.25",
    "sqlglot==20.11.0",
    "streamlit==1.31.0",
    "httpx==0.27.0",
    "asyncpg>=0.29,<0.30",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "requests>=2.32.5",
    "nest-asyncio>=1.6.0",
]
